W4d5 Atasco total con jsons

--- a/week4/day1/delivery/eda_library.ipynb
+++ b/week4/day1/delivery/eda_library.ipynb
@@ -41,20 +41,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "2370\n"
+     "output_type": "error",
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (your_module.py, line 6)",
+     "traceback": [
+      "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[0;32m\"C:\\Users\\yeste\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\IPython\\core\\interactiveshell.py\"\u001b[0m, line \u001b[0;32m3343\u001b[0m, in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-cf221b601a0a>\"\u001b[1;36m, line \u001b[1;32m1\u001b[1;36m, in \u001b[1;35m<module>\u001b[1;36m\u001b[0m\n\u001b[1;33m    import your_module as ym\u001b[0m\n",
+      "\u001b[1;36m  File \u001b[1;32m\"c:\\Users\\yeste\\Documents\\datascience-thebridge\\datascience-thebridge\\week4\\day1\\delivery\\your_module.py\"\u001b[1;36m, line \u001b[1;32m6\u001b[0m\n\u001b[1;33m    \"\"\" Next line is not needed if you wrote it before. Consider deletion.\"\"\"\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     ]
     }
    ],
    "source": [
-    "import your_module as ym\n",
-    "ym.Random_n_g()\n"
+    "import your_module as ym\n"
    ]
   },
   {
@@ -63,9 +68,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "np."
+    "ym.tsv_df ()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -84,7 +95,7 @@
   "pygments_lexer": "ipython3",
   "version": 3,
   "kernelspec": {
-   "name": "python_defaultSpec_1594130709243",
+   "name": "python_defaultSpec_1594381172031",
    "display_name": "Python 3"
   }
  },
