--- a/week4/day2/exercises/1_Basic_concepts/Chipotle/Solutions.ipynb
+++ b/week4/day2/exercises/1_Basic_concepts/Chipotle/Solutions.ipynb
@@ -588,6 +588,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "39237.02"
+     },
+     "metadata": {},
+     "execution_count": 39
+    }
+   ],
+   "source": [
+    "(chipo['item_price'] * chipo['quantity']).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {
     "collapsed": false
