--- a/week4/day1/delivery/eda_library.ipynb
+++ b/week4/day1/delivery/eda_library.ipynb
@@ -45,30 +45,65 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (your_module.py, line 6)",
-     "traceback": [
-      "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
-      "  File \u001b[0;32m\"C:\\Users\\yeste\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\IPython\\core\\interactiveshell.py\"\u001b[0m, line \u001b[0;32m3343\u001b[0m, in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-cf221b601a0a>\"\u001b[1;36m, line \u001b[1;32m1\u001b[1;36m, in \u001b[1;35m<module>\u001b[1;36m\u001b[0m\n\u001b[1;33m    import your_module as ym\u001b[0m\n",
-      "\u001b[1;36m  File \u001b[1;32m\"c:\\Users\\yeste\\Documents\\datascience-thebridge\\datascience-thebridge\\week4\\day1\\delivery\\your_module.py\"\u001b[1;36m, line \u001b[1;32m6\u001b[0m\n\u001b[1;33m    \"\"\" Next line is not needed if you wrote it before. Consider deletion.\"\"\"\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import your_module as ym\n"
+    "import mi_modulo as ym\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "4560\n"
+    }
+   ],
    "source": [
-    "ym.tsv_df ()"
+    "ym.Random_n_g ()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<function mi_modulo.tsv_df(x)>"
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
+   "source": [
+    "ym.tsv_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'url' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-a7e20b34fa82>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mym\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpabajo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0murl\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'url' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "ym.pabajo(url)"
    ]
   },
   {
@@ -95,7 +130,7 @@
   "pygments_lexer": "ipython3",
   "version": 3,
   "kernelspec": {
-   "name": "python_defaultSpec_1594381172031",
+   "name": "python_defaultSpec_1594409084341",
    "display_name": "Python 3"
   }
  },
