--- a/week4/day1/delivery/eda_library.ipynb
+++ b/week4/day1/delivery/eda_library.ipynb
@@ -123,6 +123,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]"
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "source": [
+    "l1 = []\n",
+    "for j in range(16):\n",
+    "    l1.append(j)\n",
+    "l1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-25-29fed4f17e90>, line 2)",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-25-29fed4f17e90>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    Filtra_l1 = lambda x: x==True if x > 5\u001b[0m\n\u001b[1;37m                                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "def _f_protected (x):\n",
+    "    Filtra_l1 = lambda x : x+2 if x > 5 \n",
+    "    l1 = []\n",
+    "    for j in range(16):\n",
+    "        l1.append(j)\n",
+    "    f = filter (Filtra_l1, l1 )\n",
+    "    return f\n",
+    "_f_protected()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -145,7 +191,7 @@
   "pygments_lexer": "ipython3",
   "version": 3,
   "kernelspec": {
-   "name": "python_defaultSpec_1594576013421",
+   "name": "python_defaultSpec_1594736542384",
    "display_name": "Python 3"
   }
  },
