--- a/week5/day1/theory/python/3_os_path.ipynb
+++ b/week5/day1/theory/python/3_os_path.ipynb
@@ -9,11 +9,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from my_module import suma"
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'my_module'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-6f1b7cfa21b3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mmy_module\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'my_module'"
+     ]
+    }
+   ],
+   "source": [
+    "import my_module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "['z:\\\\Data_Science\\\\TheBridge\\\\Content\\\\Contenido_Curso\\\\data_science_jun_2020\\\\week5\\\\day1\\\\theory\\\\python',\n 'c:\\\\Users\\\\gvazquez\\\\.vscode\\\\extensions\\\\ms-python.python-2020.6.91350\\\\pythonFiles',\n 'c:\\\\Users\\\\gvazquez\\\\.vscode\\\\extensions\\\\ms-python.python-2020.6.91350\\\\pythonFiles\\\\lib\\\\python',\n 'Z:\\\\Data_Science\\\\Software\\\\Python\\\\Python_3.6.4\\\\python36.zip',\n 'Z:\\\\Data_Science\\\\Software\\\\Python\\\\Python_3.6.4\\\\DLLs',\n 'Z:\\\\Data_Science\\\\Software\\\\Python\\\\Python_3.6.4\\\\lib',\n 'Z:\\\\Data_Science\\\\Software\\\\Python\\\\Python_3.6.4',\n '',\n 'C:\\\\Users\\\\gvazquez\\\\AppData\\\\Roaming\\\\Python\\\\Python36\\\\site-packages',\n 'C:\\\\Users\\\\gvazquez\\\\AppData\\\\Roaming\\\\Python\\\\Python36\\\\site-packages\\\\win32',\n 'C:\\\\Users\\\\gvazquez\\\\AppData\\\\Roaming\\\\Python\\\\Python36\\\\site-packages\\\\win32\\\\lib',\n 'C:\\\\Users\\\\gvazquez\\\\AppData\\\\Roaming\\\\Python\\\\Python36\\\\site-packages\\\\Pythonwin',\n 'Z:\\\\Data_Science\\\\Software\\\\Python\\\\Python_3.6.4\\\\lib\\\\site-packages',\n 'C:\\\\Users\\\\gvazquez\\\\AppData\\\\Roaming\\\\Python\\\\Python36\\\\site-packages\\\\IPython\\\\extensions',\n 'C:\\\\Users\\\\gvazquez\\\\.ipython']"
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "sys.path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "day1_folder = \"z:\\\\Data_Science\\\\TheBridge\\\\Content\\\\Contenido_Curso\\\\data_science_jun_2020\\\\week5\\\\day1\"\n",
+    "\n",
+    "sys.path.append(day1_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "['z:\\\\Data_Science\\\\TheBridge\\\\Content\\\\Contenido_Curso\\\\data_science_jun_2020\\\\week5\\\\day1\\\\theory\\\\python',\n 'c:\\\\Users\\\\gvazquez\\\\.vscode\\\\extensions\\\\ms-python.python-2020.6.91350\\\\pythonFiles',\n 'c:\\\\Users\\\\gvazquez\\\\.vscode\\\\extensions\\\\ms-python.python-2020.6.91350\\\\pythonFiles\\\\lib\\\\python',\n 'Z:\\\\Data_Science\\\\Software\\\\Python\\\\Python_3.6.4\\\\python36.zip',\n 'Z:\\\\Data_Science\\\\Software\\\\Python\\\\Python_3.6.4\\\\DLLs',\n 'Z:\\\\Data_Science\\\\Software\\\\Python\\\\Python_3.6.4\\\\lib',\n 'Z:\\\\Data_Science\\\\Software\\\\Python\\\\Python_3.6.4',\n '',\n 'C:\\\\Users\\\\gvazquez\\\\AppData\\\\Roaming\\\\Python\\\\Python36\\\\site-packages',\n 'C:\\\\Users\\\\gvazquez\\\\AppData\\\\Roaming\\\\Python\\\\Python36\\\\site-packages\\\\win32',\n 'C:\\\\Users\\\\gvazquez\\\\AppData\\\\Roaming\\\\Python\\\\Python36\\\\site-packages\\\\win32\\\\lib',\n 'C:\\\\Users\\\\gvazquez\\\\AppData\\\\Roaming\\\\Python\\\\Python36\\\\site-packages\\\\Pythonwin',\n 'Z:\\\\Data_Science\\\\Software\\\\Python\\\\Python_3.6.4\\\\lib\\\\site-packages',\n 'C:\\\\Users\\\\gvazquez\\\\AppData\\\\Roaming\\\\Python\\\\Python36\\\\site-packages\\\\IPython\\\\extensions',\n 'C:\\\\Users\\\\gvazquez\\\\.ipython',\n 'z:\\\\Data_Science\\\\TheBridge\\\\Content\\\\Contenido_Curso\\\\data_science_jun_2020\\\\week5\\\\day1']"
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "source": [
+    "sys.path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "17"
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "source": [
+    "import my_module as mm\n",
+    "\n",
+    "mm.suma(8, 9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'week5'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-9665a3829b67>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mweek5\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mday1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtheory\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpython\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmy_module\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msuma\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'week5'"
+     ]
+    }
+   ],
+   "source": [
+    "from week5.day1.theory.python.my_module import suma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, sys\n",
+    "\n",
+    "sys.path\n",
+    "\n",
+    "os.getcwd()\n",
+    "os.path.dirname()"
    ]
   },
   {
@@ -26,7 +156,83 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "os.getcwd():\nc:\\Users\\yeste\\Documents\\datascience-thebridge\\datascience-thebridge\\week5\\day1\\theory\\python\n\nos.path.dirname(os.getcwd()):\nc:\\Users\\yeste\\Documents\\datascience-thebridge\\datascience-thebridge\\week5\\day1\\theory\n\nIterations:\n\nc:\\Users\\yeste\\Documents\\datascience-thebridge\\datascience-thebridge\\week5\\day1\\theory\nc:\\Users\\yeste\\Documents\\datascience-thebridge\\datascience-thebridge\\week5\\day1\nc:\\Users\\yeste\\Documents\\datascience-thebridge\\datascience-thebridge\\week5\nc:\\Users\\yeste\\Documents\\datascience-thebridge\\datascience-thebridge\nsys.path:\n\nc:\\Users\\yeste\\Documents\\datascience-thebridge\\datascience-thebridge\\week5\\day1\\theory\\python\nC:\\Users\\yeste\\AppData\\Local\\Programs\\Microsoft VS Code\nc:\\Users\\yeste\\.vscode\\extensions\\ms-python.python-2020.6.91350\\pythonFiles\nc:\\Users\\yeste\\.vscode\\extensions\\ms-python.python-2020.6.91350\\pythonFiles\\lib\\python\nC:\\Users\\yeste\\AppData\\Local\\Programs\\Python\\Python38\\python38.zip\nC:\\Users\\yeste\\AppData\\Local\\Programs\\Python\\Python38\\DLLs\nC:\\Users\\yeste\\AppData\\Local\\Programs\\Python\\Python38\\lib\nC:\\Users\\yeste\\AppData\\Local\\Programs\\Python\\Python38\n\nC:\\Users\\yeste\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\nC:\\Users\\yeste\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\win32\nC:\\Users\\yeste\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\win32\\lib\nC:\\Users\\yeste\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\Pythonwin\nC:\\Users\\yeste\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\IPython\\extensions\nC:\\Users\\yeste\\.ipython\n"
+     "text": "os.getcwd():\nz:\\Data_Science\\TheBridge\\Content\\Contenido_Curso\\data_science_jun_2020\\week5\\day1\\theory\\python\n"
+    }
+   ],
+   "source": [
+    "print(\"os.getcwd():\")\n",
+    "print(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "os.path.dirname(os.getcwd()):\nz:\\Data_Science\\TheBridge\\Content\\Contenido_Curso\\data_science_jun_2020\\week5\\day1\\theory\n"
+    }
+   ],
+   "source": [
+    "current_folder = os.getcwd()\n",
+    "\n",
+    "print(\"os.path.dirname(os.getcwd()):\")\n",
+    "print(os.path.dirname(current_folder))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'z:\\\\Data_Science\\\\TheBridge\\\\Content\\\\Contenido_Curso\\\\data_science_jun_2020\\\\'"
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "j = \"z:\\\\Data_Science\\\\TheBridge\\\\Content\\\\Contenido_Curso\\\\data_science_jun_2020\\\\\"\n",
+    "\n",
+    "j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'z:\\\\Data_Science\\\\TheBridge\\\\Content\\\\Contenido_Curso\\\\data_science_jun_2020\\\\week5\\\\day1\\\\theory\\\\python'"
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "os.getcwd():\nz:\\Data_Science\\TheBridge\\Content\\Contenido_Curso\\data_science_jun_2020\\week5\\day1\\theory\\python\n\nos.path.dirname(os.getcwd()):\nz:\\Data_Science\\TheBridge\\Content\\Contenido_Curso\\data_science_jun_2020\\week5\\day1\\theory\n\nIterations:\n\nz:\\Data_Science\\TheBridge\\Content\\Contenido_Curso\\data_science_jun_2020\\week5\\day1\\theory\nz:\\Data_Science\\TheBridge\\Content\\Contenido_Curso\\data_science_jun_2020\\week5\\day1\nz:\\Data_Science\\TheBridge\\Content\\Contenido_Curso\\data_science_jun_2020\\week5\nz:\\Data_Science\\TheBridge\\Content\\Contenido_Curso\\data_science_jun_2020\nsys.path:\n\n['z:\\\\Data_Science\\\\TheBridge\\\\Content\\\\Contenido_Curso\\\\data_science_jun_2020\\\\week5\\\\day1\\\\theory\\\\python', 'c:\\\\Users\\\\gvazquez\\\\.vscode\\\\extensions\\\\ms-python.python-2020.6.91350\\\\pythonFiles', 'c:\\\\Users\\\\gvazquez\\\\.vscode\\\\extensions\\\\ms-python.python-2020.6.91350\\\\pythonFiles\\\\lib\\\\python', 'Z:\\\\Data_Science\\\\Software\\\\Python\\\\Python_3.6.4\\\\python36.zip', 'Z:\\\\Data_Science\\\\Software\\\\Python\\\\Python_3.6.4\\\\DLLs', 'Z:\\\\Data_Science\\\\Software\\\\Python\\\\Python_3.6.4\\\\lib', 'Z:\\\\Data_Science\\\\Software\\\\Python\\\\Python_3.6.4', '', 'C:\\\\Users\\\\gvazquez\\\\AppData\\\\Roaming\\\\Python\\\\Python36\\\\site-packages', 'C:\\\\Users\\\\gvazquez\\\\AppData\\\\Roaming\\\\Python\\\\Python36\\\\site-packages\\\\win32', 'C:\\\\Users\\\\gvazquez\\\\AppData\\\\Roaming\\\\Python\\\\Python36\\\\site-packages\\\\win32\\\\lib', 'C:\\\\Users\\\\gvazquez\\\\AppData\\\\Roaming\\\\Python\\\\Python36\\\\site-packages\\\\Pythonwin', 'Z:\\\\Data_Science\\\\Software\\\\Python\\\\Python_3.6.4\\\\lib\\\\site-packages', 'C:\\\\Users\\\\gvazquez\\\\AppData\\\\Roaming\\\\Python\\\\Python36\\\\site-packages\\\\IPython\\\\extensions', 'C:\\\\Users\\\\gvazquez\\\\.ipython', 'z:\\\\Data_Science\\\\TheBridge\\\\Content\\\\Contenido_Curso\\\\data_science_jun_2020\\\\week5\\\\day1']\n"
     }
    ],
    "source": [
@@ -49,8 +255,7 @@
     "        \n",
     "    print(\"sys.path:\")\n",
     "    print(\"\")\n",
-    "    for x in sys.path:\n",
-    "        print(x)"
+    "    print(sys.path)"
    ]
   },
   {
@@ -62,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +286,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'z:\\\\Data_Science\\\\TheBridge\\\\Content\\\\Contenido_Curso\\\\data_science_jun_2020\\\\week5\\\\day1\\\\theory\\\\python'"
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "['',\n 'c:\\\\Users\\\\gvazquez\\\\.vscode\\\\extensions\\\\ms-python.python-2020.6.91350\\\\pythonFiles\\\\lib\\\\python',\n 'C:\\\\Users\\\\gvazquez\\\\AppData\\\\Roaming\\\\Python\\\\Python36\\\\site-packages\\\\win32\\\\lib',\n 'z:\\\\Data_Science\\\\TheBridge\\\\Content\\\\Contenido_Curso\\\\data_science_jun_2020\\\\week5',\n 'c:\\\\Users\\\\gvazquez\\\\.vscode\\\\extensions\\\\ms-python.python-2020.6.91350\\\\pythonFiles',\n 'Z:\\\\Data_Science\\\\Software\\\\Python\\\\Python_3.6.4\\\\python36.zip',\n 'Z:\\\\Data_Science\\\\Software\\\\Python\\\\Python_3.6.4\\\\DLLs',\n 'C:\\\\Users\\\\gvazquez\\\\AppData\\\\Roaming\\\\Python\\\\Python36\\\\site-packages\\\\IPython\\\\extensions',\n 'z:\\\\Data_Science\\\\TheBridge\\\\Content\\\\Contenido_Curso\\\\data_science_jun_2020',\n 'Z:\\\\Data_Science\\\\Software\\\\Python\\\\Python_3.6.4\\\\lib',\n 'z:\\\\Data_Science\\\\TheBridge\\\\Content\\\\Contenido_Curso\\\\data_science_jun_2020\\\\week5\\\\day1\\\\theory',\n 'C:\\\\Users\\\\gvazquez\\\\AppData\\\\Roaming\\\\Python\\\\Python36\\\\site-packages\\\\win32',\n 'C:\\\\Users\\\\gvazquez\\\\AppData\\\\Roaming\\\\Python\\\\Python36\\\\site-packages\\\\Pythonwin',\n 'z:\\\\Data_Science\\\\TheBridge\\\\Content\\\\Contenido_Curso\\\\data_science_jun_2020\\\\week5\\\\day1\\\\theory\\\\python',\n 'Z:\\\\Data_Science\\\\Software\\\\Python\\\\Python_3.6.4\\\\lib\\\\site-packages',\n 'C:\\\\Users\\\\gvazquez\\\\.ipython',\n 'C:\\\\Users\\\\gvazquez\\\\AppData\\\\Roaming\\\\Python\\\\Python36\\\\site-packages',\n 'Z:\\\\Data_Science\\\\Software\\\\Python\\\\Python_3.6.4',\n 'z:\\\\Data_Science\\\\TheBridge\\\\Content\\\\Contenido_Curso\\\\data_science_jun_2020\\\\week5\\\\day1']"
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "source": [
+    "sys.path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -90,11 +331,31 @@
       "text/plain": "13"
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 22
     }
    ],
    "source": [
     "from week5.day1.theory.python.my_module import suma\n",
+    "\n",
+    "suma(9, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "13"
+     },
+     "metadata": {},
+     "execution_count": 23
+    }
+   ],
+   "source": [
+    "from week1.my_module import suma\n",
     "\n",
     "suma(9, 4)"
    ]
@@ -122,8 +383,8 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1594626523275",
-   "display_name": "Python 3.8.3 64-bit"
+   "name": "python36464bitc2077ed07ea84d23aa5b518d224882ab",
+   "display_name": "Python 3.6.4 64-bit"
   }
  },
  "nbformat": 4,
